Bug 442919 - Desktop widgets are forcibly moved by startup notifications
Summary: Desktop widgets are forcibly moved by startup notifications
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: 5.21.5
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-25 01:11 UTC by David
Modified: 2023-01-25 16:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David 2021-09-25 01:11:32 UTC
SUMMARY
If I put a widget at the bottom-right corner right above the clock from the system tray, next time I restart the computer and some notification pops up (such as "updates available" from discover), the widget will move to make space for the notification pop-up, which should **not** happen.

STEPS TO REPRODUCE
1. Put a big widget (e.g. the clock with calendar showing in large) at the bottom right corner of the desktop, above the main panel.
2. Have updates available so that discover would show a pop-up next time a plasma session is started.
3. Restart the computer and wait until plasma loads.

OBSERVED RESULT
The widget moves to make space for the notification pop-up, which is not itself a widget and has no issue appearing above a background widget.

EXPECTED RESULT
The widget should stay where I left it.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.21.5
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2023-01-25 14:27:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2535
Comment 2 Marco Martin 2023-01-25 16:09:06 UTC
Git commit 39dd7bc3b75df58eb2d569df4f89cbe65f1113b6 by Marco Martin.
Committed on 25/01/2023 at 16:07.
Pushed by mart into branch 'master'.

fix problems in plasmoid layout restore

The layout manager has a functionality that when the layout is resized,
it tries to move all plasmoids to keep roughtly the same proportional
distance they had before the resize happened, to make screen resolution
change the least "suprising" possible.

We actually need this in only one case:
The screen resoltion changed and there is not a saved plasmoid layout
for this resolution.

What was actually happening was that this heuristic was executed *only*
when the layout was resized due to panels being added/resized (and not
when it should have been).
When a panel gets added/resized we want the plasmoids layoput to change
*as little as possible* again, to not make surprises.
As a side effect , it casued a pretty serious bug:
plasmoids near to the vertical center of the screen migrated upwards of
few pixels at every plasma restart, because ever time it starts without
a panel which appears only later, causing that heuristic to execute and
break havoc.
Now the heuristic is executed only when the screen resolution changes,
which will cause a "config key change" event.
Execute this also when the containment migrates to a new screen, and as
soon this heuristic got executed, save the layout on the new key.
Related: bug 437538, bug 431432, bug 453141

M  +7    -2    components/containmentlayoutmanager/abstractlayoutmanager.h
M  +14   -4    components/containmentlayoutmanager/appletslayout.cpp
M  +9    -2    components/containmentlayoutmanager/gridlayoutmanager.cpp
M  +1    -1    components/containmentlayoutmanager/gridlayoutmanager.h

https://invent.kde.org/plasma/plasma-workspace/commit/39dd7bc3b75df58eb2d569df4f89cbe65f1113b6
Comment 3 Marco Martin 2023-01-25 16:23:35 UTC
Git commit c7fe9fc0d271a145c9025994673599fb51872446 by Marco Martin.
Committed on 25/01/2023 at 16:23.
Pushed by mart into branch 'Plasma/5.27'.

fix problems in plasmoid layout restore

The layout manager has a functionality that when the layout is resized,
it tries to move all plasmoids to keep roughtly the same proportional
distance they had before the resize happened, to make screen resolution
change the least "suprising" possible.

We actually need this in only one case:
The screen resoltion changed and there is not a saved plasmoid layout
for this resolution.

What was actually happening was that this heuristic was executed *only*
when the layout was resized due to panels being added/resized (and not
when it should have been).
When a panel gets added/resized we want the plasmoids layoput to change
*as little as possible* again, to not make surprises.
As a side effect , it casued a pretty serious bug:
plasmoids near to the vertical center of the screen migrated upwards of
few pixels at every plasma restart, because ever time it starts without
a panel which appears only later, causing that heuristic to execute and
break havoc.
Now the heuristic is executed only when the screen resolution changes,
which will cause a "config key change" event.
Execute this also when the containment migrates to a new screen, and as
soon this heuristic got executed, save the layout on the new key.
Related: bug 437538, bug 431432, bug 453141

M  +7    -2    components/containmentlayoutmanager/abstractlayoutmanager.h
M  +14   -4    components/containmentlayoutmanager/appletslayout.cpp
M  +9    -2    components/containmentlayoutmanager/gridlayoutmanager.cpp
M  +1    -1    components/containmentlayoutmanager/gridlayoutmanager.h

https://invent.kde.org/plasma/plasma-workspace/commit/c7fe9fc0d271a145c9025994673599fb51872446